<resources>

    <string name="app_name">Lunch List</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_lunch_list">Lunch List</string>
    <string name="address">Address:</string>
    <string name="name">Name:</string>
    <string name="type">Type:</string>
    <string name="location">Location</string>
    <string name="save_location">Save Location</string>
    <string name="take_out">Take-Out</string>
    <string name="sit_down">Sit-Down</string>
    <string name="delivery">Delivery</string>
    <string name="date_last_visit">Date of Last Visit:</string>
    <string name="restaurant_icon">Restaurant Icon</string>
    <string name="list">List</string>
    <string name="details">Details</string>
    <string name="notes">Notes</string>
    <string name="run_long_task">Run Long Task</string>
    <string name="click_menu">Click the MENU button to add a restaurant!</string>
    <string name="add">Add</string>
    <string name="choose_sort_order">Choose a sort order</string>
    <string name="order_string_uses">Choose the order the list uses</string>
    <string name="sort_order">Sort Order</string>
    <string name="settings">Settings</string>
    <string name="feed_url">Feed URL</string>
    <string name="rss_feed">RSS Feed</string>
    <string name="not_set">(Not Set)</string>
    <string name="show_on_map">Show on Map</string>
    <string name="api_key">0Y2xsE5alfOTVFtAQvrkkkygoDw5UHQdZWQb5sg</string>
    <string name="sound_lunch_alarm">Sound a Lunch Alarm</string>
    <string name="alarm_summary">Check if you want to know when it is time for lunch</string>
    <string name="lunch_alarm_time">Lunch Alarm Time</string>
    <string name="set_alarm_summary">Set your desired time for the lunch alarm</string>
    <string name="time_for_lunch">It\'s time for lunch!</string>
    <string name="use_notification">Use a Notification</string>
    <string name="notification_summary">Check if you want a status bar icon at lunchtime, or uncheck for a full-screen notice</string>
    <string name="random_restaurant_icon">Tap to display a random restaurant</string>
    <string name="empty">No restaurants!</string>
    <string name="help">Help</string>
    <string name="alarm_ringtone">Alarm Ringtone</string>
    <string name="alarm_ringtone_summary">Indicate the ringtone to play when it is lunchtime</string>
	<string name="phone">Phone:</string>
	<string name="call">Call</string>
    
</resources>