<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <ListPreference
        android:dialogTitle="@string/choose_sort_order"
        android:entries="@array/sort_names"
        android:entryValues="@array/sort_clauses"
        android:key="sort_order"
        android:summary="@string/order_string_uses"
        android:title="@string/sort_order" />

    <CheckBoxPreference
        android:key="alarm"
        android:summary="@string/alarm_summary"
        android:title="@string/sound_lunch_alarm" />

    <csci498.laberle.lunchlist.TimePreference
        android:defaultValue="12:00"
        android:dependency="alarm"
        android:key="alarm_time"
        android:summary="@string/set_alarm_summary"
        android:title="@string/time_for_lunch" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:dependency="alarm"
        android:key="use_notification"
        android:summary="@string/notification_summary"
        android:title="@string/use_notification" />

    <RingtonePreference
        android:dependency="alarm"
        android:key="alarm_ringtone"
        android:showSilent="true"
        android:summary="@string/alarm_ringtone_summary"
        android:title="@string/alarm_ringtone" />

</PreferenceScreen>